compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__results__aliased_error.snap
---
source: compiler-core/src/javascript/tests/results.rs
expression: "import rakun.{Error as Thing}\npub fn main() { Thing(1) }"
---
----- SOURCE CODE
import rakun.{Error as Thing}
pub fn main() { Thing(1) }

----- COMPILED JAVASCRIPT
import * as $rakun from "../rakun.mjs";
import { Error as Thing } from "../rakun.mjs";

export function main() {
  return new Thing(1);
}
