compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__results__aliased_error_fn.snap
---
source: compiler-core/src/javascript/tests/results.rs
expression: "import rakun.{Error as Thing}\npub fn main() { Thing }"
---
----- SOURCE CODE
import rakun.{Error as Thing}
pub fn main() { Thing }

----- COMPILED JAVASCRIPT
import * as $rakun from "../rakun.mjs";
import { Error as Thing } from "../rakun.mjs";

export function main() {
  return (var0) => { return new Thing(var0); };
}
