compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__results__aliased_ok.snap
---
source: compiler-core/src/javascript/tests/results.rs
expression: "import rakun.{Ok as Thing}\npub fn main() { Thing(1) }"
---
----- SOURCE CODE
import rakun.{Ok as Thing}
pub fn main() { Thing(1) }

----- COMPILED JAVASCRIPT
import * as $rakun from "../rakun.mjs";
import { Ok as Thing } from "../rakun.mjs";

export function main() {
  return new Thing(1);
}
