compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__results__error.snap
---
source: compiler-core/src/javascript/tests/results.rs
expression: "pub fn main() { Error(1) }"
---
----- SOURCE CODE
pub fn main() { Error(1) }

----- COMPILED JAVASCRIPT
import { Error } from "../rakun.mjs";

export function main() {
  return new Error(1);
}
