compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__results__error_fn.snap
---
source: compiler-core/src/javascript/tests/results.rs
expression: "pub fn main() { Error }"
---
import { Error } from "../rakun.mjs";

export function main() {
  return (var0) => { return new Error(var0); };
}
