compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__results__ok.snap
---
source: compiler-core/src/javascript/tests/results.rs
expression: "pub fn main() { Ok(1) }"
---
import { Ok } from "../rakun.mjs";

export function main() {
  return new Ok(1);
}
