compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__results__ok_fn.snap
---
source: compiler-core/src/javascript/tests/results.rs
assertion_line: 15
expression: "pub fn main() { Ok }"
---
----- SOURCE CODE
pub fn main() { Ok }

----- COMPILED JAVASCRIPT
import { Ok } from "../rakun.mjs";

export function main() {
  return (var0) => { return new Ok(var0); };
}
