compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__results__qualified_error.snap
---
source: compiler-core/src/javascript/tests/results.rs
assertion_line: 33
expression: "import rakun\npub fn main() { rakun.Error(1) }"
---
----- SOURCE CODE
import rakun
pub fn main() { rakun.Error(1) }

----- COMPILED JAVASCRIPT
import * as $rakun from "../rakun.mjs";

export function main() {
  return new $rakun.Error(1);
}
