compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__results__qualified_error_fn.snap
---
source: compiler-core/src/javascript/tests/results.rs
expression: "import rakun\npub fn main() { rakun.Error }"
---
----- SOURCE CODE
import rakun
pub fn main() { rakun.Error }

----- COMPILED JAVASCRIPT
import * as $rakun from "../rakun.mjs";

export function main() {
  return (var0) => { return new $rakun.Error(var0); };
}
