compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__results__qualified_ok.snap
---
source: compiler-core/src/javascript/tests/results.rs
assertion_line: 25
expression: "import rakun\npub fn main() { rakun.Ok(1) }"
---
----- SOURCE CODE
import rakun
pub fn main() { rakun.Ok(1) }

----- COMPILED JAVASCRIPT
import * as $rakun from "../rakun.mjs";

export function main() {
  return new $rakun.Ok(1);
}
