compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__results__qualified_ok_fn.snap
---
source: compiler-core/src/javascript/tests/results.rs
assertion_line: 41
expression: "import rakun\npub fn main() { rakun.Ok }"
---
----- SOURCE CODE
import rakun
pub fn main() { rakun.Ok }

----- COMPILED JAVASCRIPT
import * as $rakun from "../rakun.mjs";

export function main() {
  return (var0) => { return new $rakun.Ok(var0); };
}
